--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <body>
     <div class="fpage">
         <div class="fpage-items first-cont">
-            <img class="logo" src="./Photos/logo.png" alt="">
+            <img class="logo" src="./logo.png" alt="">
         </div>
         <div class="fpage-items sec-cont">
             <h1>Enter your NAME to start the GAME</h1>
@@ -257,7 +257,7 @@
                 </div>
                 <div class="match-items mid">
                     <h2 class="user-name rounds">Round 1</h2>
-                    <img id="vs" src="./Photos/vs.png" alt="vs">
+                    <img id="vs" src="./vs.png" alt="vs">
                     <h1 class="decision"></h1>
                 </div>
                 <div class="match-items red">
@@ -270,26 +270,23 @@
             <div class="third-cont-items choices">
                 <div class="third-cont-items choices tbv">
                     <div class="temp">
-                        <img id="1" class="choice-items" src="./Photos/rock.png" alt="">
+                        <img id="1" class="choice-items" src="./rock.png" alt="">
                         <p class="title">Rock</p>
                     </div>
                     <div class="temp">
-                        <img id="2" class="choice-items" src="./Photos/paper.png" alt="">
+                        <img id="2" class="choice-items" src="./paper.png" alt="">
                         <p class="title">Paper</p>
                     </div>
                     <div class="temp">
-                        <img id="3" class="choice-items" src="./Photos/scissor.png" alt="">
+                        <img id="3" class="choice-items" src="./scissor.png" alt="">
                         <p class="title">Scissor</p>
                     </div>
                 </div>
                 <button class="play-again">Play again</button>
-                
-
             </div>
         </div>
     </div>
     <script src="./index.js"></script>
     </bod>
 </body>
-
 </html>
