--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="fpage-items first-cont">
             <img class="logo" src="./logo.png" alt="">
         </div>
+        <h1><strong style="font-weight: 600;">R</strong>ock <strong style="font-weight: 600;">P</strong>aper <strong style="font-weight: 600;">S</strong>cissor</h1>
         <div class="fpage-items sec-cont">
             <h1 id="head">Enter your NAME to start the GAME</h1>
             <h1 class="resp">Enter your NAME<br> to start the GAME</h1>
