--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
                     </div>
                 </div>
                 <div class="match-items mid">
-                    <h2 id="nround" class="user-name rounds">Round 1</h2>
-                    <img id="vs" src="./vs.png" alt="vs">
+                    <div id="mid-item1">
+                        <h2 id="nround" class="user-name rounds">Round 1</h2>
+                    </div>
+                    <div id="mid-item2">
+                        <img id="vs" src="./vs.png" alt="vs">
+                    </div>
                     <h1 class="decision"></h1>
                 </div>
                 <div class="match-items red">
